crates/rspack_error/tests/fixtures/css_syntax_error/fixtures__css_syntax_error.snap
---
source: crates/rspack_error/tests/fixtures.rs
assertion_line: 38
expression: css_syntax_error
---
error[css]: Css parsing error
  ┌─ tests/fixtures/css_syntax_error/style.css:4:14
  │
4 │   background: red;
  │              ^ Expected function or ident tokens

error[css]: Css parsing error
  ┌─ tests/fixtures/css_syntax_error/style.css:4:18
  │
4 │   background: red;
  │                  ^ Unexpected character `';'`


